crates/alder-parse/src/item/snapshots/alder_parse__item__impl___tests__impl_simple.snap
---
source: crates/alder-parse/src/item/impl_.rs
description: "impl Show[User] {\n    fn show(user: User) String { user.name }\n}\n"
---
ImplDecl {
    trait_: Path {
        segments: [
            Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 6,
                    },
                    end: Position {
                        line: 1,
                        column: 10,
                    },
                },
                value: "Show",
            },
        ],
    },
    args: [
        Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 11,
                },
                end: Position {
                    line: 1,
                    column: 15,
                },
            },
            value: Named {
                path: Path {
                    segments: [
                        Located {
                            region: Region {
                                start: Position {
                                    line: 1,
                                    column: 11,
                                },
                                end: Position {
                                    line: 1,
                                    column: 15,
                                },
                            },
                            value: "User",
                        },
                    ],
                },
                args: [],
            },
        },
    ],
    where_clause: [],
    items: [
        Fn(
            FnDecl {
                name: Located {
                    region: Region {
                        start: Position {
                            line: 2,
                            column: 8,
                        },
                        end: Position {
                            line: 2,
                            column: 12,
                        },
                    },
                    value: "show",
                },
                params: [
                    Param {
                        pattern: Located {
                            region: Region {
                                start: Position {
                                    line: 2,
                                    column: 13,
                                },
                                end: Position {
                                    line: 2,
                                    column: 17,
                                },
                            },
                            value: Var(
                                "user",
                            ),
                        },
                        annotation: Some(
                            Located {
                                region: Region {
                                    start: Position {
                                        line: 2,
                                        column: 19,
                                    },
                                    end: Position {
                                        line: 2,
                                        column: 23,
                                    },
                                },
                                value: Named {
                                    path: Path {
                                        segments: [
                                            Located {
                                                region: Region {
                                                    start: Position {
                                                        line: 2,
                                                        column: 19,
                                                    },
                                                    end: Position {
                                                        line: 2,
                                                        column: 23,
                                                    },
                                                },
                                                value: "User",
                                            },
                                        ],
                                    },
                                    args: [],
                                },
                            },
                        ),
                    },
                ],
                ret: Some(
                    Located {
                        region: Region {
                            start: Position {
                                line: 2,
                                column: 25,
                            },
                            end: Position {
                                line: 2,
                                column: 31,
                            },
                        },
                        value: Named {
                            path: Path {
                                segments: [
                                    Located {
                                        region: Region {
                                            start: Position {
                                                line: 2,
                                                column: 25,
                                            },
                                            end: Position {
                                                line: 2,
                                                column: 31,
                                            },
                                        },
                                        value: "String",
                                    },
                                ],
                            },
                            args: [],
                        },
                    },
                ),
                where_clause: [],
                body: Some(
                    Located {
                        region: Region {
                            start: Position {
                                line: 2,
                                column: 32,
                            },
                            end: Position {
                                line: 2,
                                column: 45,
                            },
                        },
                        value: Block {
                            stmts: [],
                            tail: Some(
                                Located {
                                    region: Region {
                                        start: Position {
                                            line: 2,
                                            column: 34,
                                        },
                                        end: Position {
                                            line: 2,
                                            column: 43,
                                        },
                                    },
                                    value: Access {
                                        record: Located {
                                            region: Region {
                                                start: Position {
                                                    line: 2,
                                                    column: 34,
                                                },
                                                end: Position {
                                                    line: 2,
                                                    column: 38,
                                                },
                                            },
                                            value: Var(
                                                "user",
                                            ),
                                        },
                                        field: Located {
                                            region: Region {
                                                start: Position {
                                                    line: 2,
                                                    column: 39,
                                                },
                                                end: Position {
                                                    line: 2,
                                                    column: 43,
                                                },
                                            },
                                            value: "name",
                                        },
                                    },
                                },
                            ),
                        },
                    },
                ),
            },
        ),
    ],
}
